# HSE_MLDS_project_mlops

./: .gitignore  .pre-commit-config.yaml  README.md  config_hydra.py  config_hyrda.py  data.dvc  infer.py  prepare_data.py  pyproject.toml  setup.cfg  train.py
.dvc/: config
.github/workflows/: pre-commit.yml
conf_hydra/: config.yaml
configs/: config.yaml
utils/: dataset.py  model.py  plots.py  seed.py  trainer.py
