[tool.poetry]
name = "hse-mlds-project-mlops"
version = "0.1.0"
description = "Project for Mlopos course"
authors = ["Sophie Buzaeva <sofibuz@mail.ru>"]
readme = "README.md"
repository = "https://github.com/sophieebuz/HSE_MLDS_project_mlops.git"
packages = [{include = "hse_mlds_project_mlops"}]

[tool.poetry.dependencies]
python = "3.10.8"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
