[tool.poetry]
name = "hse-mlds-project-mlops"
version = "0.1.0"
description = "Project for Mlopos course"
authors = ["Sophie Buzaeva <sofibuz@mail.ru>"]
readme = "README.md"
repository = "https://github.com/sophieebuz/HSE_MLDS_project_mlops.git"
packages = [{include = "hse_mlds_project_mlops"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
catboost = "^1.2.2"
hydra-core = "^1.3.2"
torch = "^2.1.2"
seaborn = "^0.13.0"


[tool.poetry.group.dev-dependencies.dependencies]
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"
dvc = {extras = ["gdrive"], version = "^3.33.4"}
flake8-pyproject = "^1.2.3"
pyproject-pre-commit = "^0.1.3"
mlflow = "^2.9.2"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2

#[tool.flake8]
#max-line-length = 90
#ignore = ['D100', 'D101', 'D102', 'D103', 'D105', 'D107', 'T201',  'N806']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
